--- a/package.json
+++ b/package.json
@@ -1,7 +1,19 @@
 {
-  "name": "test",
-  "version": "0.1.0",
-  "private": true,
+  "name": "rn-persian-date-picker-react2",
+  "keywords": [
+    "date",
+    "date-picker",
+    "persian",
+    "persian-date-picker",
+    "react",
+    "next js"
+  ],
+  "main": "dist/index.js",
+  "types": "dist/types/src/index.d.ts",
+  "version": "1.1.4",
+  "author": "Reza Noori",
+  "license": "ISC",
+  "private": false,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -18,9 +30,16 @@
     "next": "13.4.9",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.1.6"
+    "react-icons": "^4.10.1"
   },
   "devDependencies": {
-    "@types/jalaali-js": "^1.1.1"
+    "@types/jalaali-js": "^1.1.1",
+    "babel-loader": "^9.1.3",
+    "css-loader": "^6.8.1",
+    "style-loader": "^3.3.3",
+    "ts-loader": "^9.4.4",
+    "typescript": "^5.1.6",
+    "webpack": "^5.88.1",
+    "webpack-cli": "^5.1.4"
   }
 }
